RESOLVED FIXED221086
Recover audio and video capture from GPUProcess crash
https://bugs.webkit.org/show_bug.cgi?id=221086
Summary Recover audio and video capture from GPUProcess crash
youenn fablet
Reported 2021-01-28 05:51:46 PST
Recover audio and video capture from GPUProcess crash
Attachments
Patch (20.72 KB, patch)
2021-01-28 05:57 PST, youenn fablet
ews-feeder: commit-queue-
Patch (20.67 KB, patch)
2021-01-28 06:19 PST, youenn fablet
no flags
Patch (20.55 KB, patch)
2021-01-28 08:40 PST, youenn fablet
no flags
youenn fablet
Comment 1 2021-01-28 05:57:44 PST
Radar WebKit Bug Importer
Comment 2 2021-01-28 05:59:45 PST
youenn fablet
Comment 3 2021-01-28 06:19:06 PST
youenn fablet
Comment 4 2021-01-28 08:40:28 PST
EWS
Comment 5 2021-01-29 00:48:03 PST
Committed r272050: <https://trac.webkit.org/changeset/272050> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418645 [details].
Note You need to log in before you can comment on or make changes to this bug.